--- a/archivo_prueba.html
+++ b/archivo_prueba.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FILE A</title>
 </head>
 <body>
-    
+    <h1>Hola Mundo</h1>
+    <p>Este es un archivo de prueba</p>
 </body>
 </html>
